--- a/index.html
+++ b/index.html
@@ -12,27 +12,17 @@
 
 <body>
     <div class="greetings">
-        <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span> </span>
-        <span>M</span>
-        <span>i</span>
-        <span>  </span>
-        <span>B</span>
-        <span>o</span>
-        <span>n</span>
-        <span>i</span>
-        <span>t</span>
-        <span>a</span>
-        <span>!</span>
+        <span>H</span><span>o</span><span>l</span><span>a</span>
+    </div>
+    <div class="greetings">
+        <span>M</span><span>i</span>
+    </div>
+    <div class="greetings">
+        <span>G</span><span>e</span><span>m</span><span>e</span><span>l</span><span>i</span><span>t</span><span>a</span>
     </div>
     <div class="description">
-        <span>detalle      <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
-        </button>
+        <span>detalle      <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a></span>
     </div>
-
 </body>
 
 </html>
