--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 </head>
 
 <body>
-    <div class="greetings">
-        <span>H</span><span>o</span><span>l</span><span>a</span>
-    </div>
-    <div class="greetings">
-        <span>M</span><span>i</span>
-    </div>
-    <div class="greetings">
-        <span>G</span><span>e</span><span>m</span><span>e</span><span>l</span><span>i</span><span>t</span><span>a</span>
-    </div>
-    <div class="description">
-        <span>detalle      <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a></span>
+    <div class="content">
+        <div class="greetings">
+            <span>H</span><span>o</span><span>l</span><span>a</span>
+        </div>
+        <div class="greetings">
+            <span>M</span><span>i</span>
+        </div>
+        <div class="greetings">
+            <span>B</span><span>o</span><span>n</span><span>i</span><span>t</span><span>a</span>
+        </div>
+        <div class="description">
+            <span>detalle <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a></span>
+        </div>
     </div>
 </body>
 
 </html>
+
